# ESP32-TestProj

./: .gitignore  CMakeLists.txt  partitions-16MiB.csv  partitions.csv  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ADC/: ADC.c  ADC.h
components/BSP/Bluetooth/: bluetooth.c  bluetooth.h
components/BSP/DataStructures/: custom_types.h  datastructures.c  datastructures.h
components/BSP/FuelGauge/: FuelGauge.c  FuelGauge.h
components/BSP/GT911/: GT911.c  GT911.h
components/BSP/I2C/: I2C.c  I2C.h
components/BSP/NVS_op/: nvs_op.c  nvs_op.h
components/BSP/PCA9546/: PCA9546.c  PCA9546.h
components/BSP/Protocal/: protocal.c  protocal.h
components/BSP/ST_IMU/: imu.c  imu.h  imu_reg.h
components/BSP/TCA9554/: TCA9554.c  TCA9554.h
components/BSP/TCA9555/: TCA9555.c  TCA9555.h
components/BSP/Timer/: timer.c  timer.h
components/BSP/UART/: uart_ens.c  uart_ens.h
components/BSP/rgb_lcd/: rgb_lcd copy.bkup  rgb_lcd.c  rgb_lcd.h
components/lvgl/: lv_conf.h
main/: CMakeLists.txt  idf_component.yml  lvgl_port copy.bkup  lvgl_port.c  lvgl_port.h  main.c
main/CustomUI/: Callbacks.c  Callbacks.h  CustomUI.c  CustomUI.h  data_structures.h  test_data_structures.c
main/CustomUI/Img_Src/: AddButton_Green_fit.c  AddButton_White_120_fit.c  AddButton_White_140_fit.c  ArcProgress_fit.c  BackButton_fit.c  BatteryBar_fit.c  BatteryIcon_fit.c  BluetoothIcon_fit.c  Bluetooth_Disconnect_fit.c  CalibIcon_fit.c  CancelButtonBig_fit.c  Clear_fit.c  ConfirmButtonBig_fit.c  EmptyBattery_fit.c  HorizontalProgressBar_fit.c  (+22 more)
main/ui/: ui.c  ui.h
(+7 files in other folders)
